<resources>
    <string name="app_name">test</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_01">Activity01</string>
    <string name="title_activity_02">Activity02</string>
    <string name="title_activity_03">Activity03</string>
    <string name="title_activity_04">Activity04</string>

    <string name="ui_0">0</string>

    <string name="ui_1">100</string>

    <string name="ui_2">200</string>

    <string name="id_1">1</string>

    <string name="id_2">2</string>

    <string name="id_3">3</string>

    <string name="id_4">4</string>

    <string name="id_5">5</string>

    <string name="id_6">6</string>

    <string name="id_7">7</string>

    <string name="id_8">8</string>

    <string name="id_9">9</string>

    <string name="id_10">10</string>

    <string name="id_11">11</string>

    <string name="id_12">12</string>

    <string name="id_13">13</string>

    <string name="id_14">14</string>

    <string name="id_15">15</string>

    <string name="id_16">16</string>

    <string name="id_17">17</string>

    <string name="id_18">18</string>

    <string name="id_19">19</string>

    <string name="id_20">20</string>

    <string name="id_21">21</string>

    <string name="id_22">22</string>

    <string name="id_23">23</string>

    <string name="id_24">24</string>

    <string name="id_25">25</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
</resources>
